Fix: spacing max-value on last input

--- a/src/components/spacing.css
+++ b/src/components/spacing.css
@@ -12,7 +12,8 @@
 }
 
 .space__visualisation-wrapper--px {
-    width: 4em;
+    display: inline-block;
+    width: 5em;
 }
 
 .space__visualisation {
